--- a/library.properties
+++ b/library.properties
@@ -1,10 +1,10 @@
-name=M10SD
-version=1.0.0
+name=M10CODEC
+version=1.0.1
 author=PulseRain
 maintainer=PulseRain <info@pulserain.com>
-sentence=microSD library for PulseRain M10 board.
-paragraph=Use this library to control the microSD card on PulseRain M10 board.
+sentence=CODEC library for the Si3000 CODEC on PulseRain M10 board.
+paragraph=Use this library to set up the Si3000 CODEC on PulseRain M10 board.
 category=Signal Input/Output
-url=https://github.com/PulseRain/M10SD
+url=https://github.com/PulseRain/M10CODEC
 architectures=FP51
-includes=M10SD.h
+includes=M10CODEC.h
